#337 ensured correct spelling for ai lab (#442)
* #337: Ensured correct spelling for AI Lab
* Shortened docker-usage.md
Added mounting docker.sock for SLC.
* Updated version number in docs
and also fixed spelling of 3rd party trademarks in README. 

Co-authored-by: Ariel Schulz <43442541+ArBridgeman@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -210,7 +210,7 @@
     "### Create a View on the Data\n",
     "\n",
     "This dataset has ~3600 entries. You could run the preprocessing for the whole dataset, but it would take quite some time. Instead, we will create a view containing only a part of the dataset, and use this view as the base for our preprocessing.\n",
-    "We set the size of this view here. If you want to see how the AI-Lab handles bigger datasets on your Exasol instance, you can set the `view_size` higher."
+    "We set the size of this view here. If you want to see how the AI Lab handles bigger datasets on your Exasol instance, you can set the `view_size` higher."
    ]
   },
   {
@@ -461,7 +461,7 @@
    "source": [
     "### Define the Extractor\n",
     "\n",
-    "Now we need to define an extractor to run our extraction/preprocessing. We will use a `StandardExtractor` which has 3 standard preprocessing steps built-in, namely the topic classification, keyword search and named entity recognition. It is possible to disable each of these steps in the `StandartExtractor` by setting its model to `None`. You can also use a different model instead of the built-in one, by setting its model to a specific HuggingFace model. But here we will use the `StandartExtractor` as is.\n",
+    "Now we need to define an extractor to run our extraction/preprocessing. We will use a `StandardExtractor` which has 3 standard preprocessing steps built-in, namely the topic classification, keyword search and named entity recognition. It is possible to disable each of these steps in the `StandartExtractor` by setting its model to `None`. You can also use a different model instead of the built-in one, by setting its model to a specific Hugging Face model. But here we will use the `StandartExtractor` as is.\n",
     "\n",
     "For the topic classification model we will use the topics \"urgent\", and \"not urgent\"."
    ]
