--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -16,7 +16,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -39,7 +39,7 @@
    "id": "a77ca3b4-d377-47c4-8dca-cd7da3e5da40",
    "metadata": {},
    "source": [
-    "We may need to enter a Huggingface access token in case the models we are going to use have a restricted access. This step can be skipped if we only use publicly accessible models."
+    "We may need to enter a Hugging Face access token in case the models we are going to use have a restricted access. This step can be skipped if we only use publicly accessible models."
    ]
   },
   {
