--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -18,7 +18,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "2. [Initialize the SageMaker Extension](sme_init.ipynb).\n",
     "3. [Load the MAGIC Gamma Telescope data](../data/data_telescope.ipynb).\n",
     "\n",
@@ -248,7 +248,7 @@
    "source": [
     "## Poll training status\n",
     "\n",
-    "As it was mentioned above, the model training runs asynchronously. We can monitor its progress by polling the Autopilot job status. Please call this script periodically until you see the status as Completed. Please note that the model training with AWS Sagemaker may take a considerable time. At the time when this notebook was designed the waiting time was typically in the range of 1-2 hours."
+    "As it was mentioned above, the model training runs asynchronously. We can monitor its progress by polling the Autopilot job status. Please call this script periodically until you see the status as Completed. Please note that the model training with AWS SageMaker may take a considerable time. At the time when this notebook was designed the waiting time was typically in the range of 1-2 hours."
    ]
   },
   {
