--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -11,14 +11,14 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "This set of notebooks demonstrates the functionality of the Exasol Transformer Extension. The extension allows the use of a pre-trained NLP model that can be found at the Huggingface Model Hub. It consists of a number of UDF and Lua scripts. The scripts can be uploaded into the database using a Python library.\n",
+    "This set of notebooks demonstrates the functionality of the Exasol Transformer Extension. The extension allows the use of a pre-trained NLP model that can be found at the Hugging Face Hub. It consists of a number of UDF and Lua scripts. The scripts can be uploaded into the database using a Python library.\n",
     "\n",
     "For more information, please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
     "Before using this notebook the following steps need to be completed:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
