Fixed notebook test

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -466,7 +466,7 @@
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
-    "query = \"IMPORT INTO {table!q} FROM PARQUET AT {connection} FILE {file!s}\"\n",
+    "query = \"IMPORT INTO {table!q} FROM PARQUET AT {connection!r} FILE {file!s}\"\n",
     "\n",
     "params = {\n",
     "    \"table\": (ai_lab_config.db_schema, \"US_FLIGHTS\"),\n",
