--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -32,39 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cb54534177a867be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be885525004d4fa4a70014fade69042d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66d1ec7fb427480aba1fdf28aacdd8a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -92,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "86d94d7e56b6e3da",
    "metadata": {},
    "outputs": [],
@@ -111,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d1b725da3391679d",
    "metadata": {},
    "outputs": [],
@@ -131,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7e71b1278aa02213",
    "metadata": {},
    "outputs": [],
@@ -142,178 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ea370394b0492712",
    "metadata": {
     "tags": [
      "uploading_model"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠙ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/jupyterenv/lib/python3.10/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ec2-54-246-49-57.eu-west-1.compute.amazonaws.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠸ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e6b6bd7c3024e0ea9fa5a892def9e7a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠇ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd20ce8a05374aa0abe514bda8b1dbd9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/438M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠴ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8334b2dd7394ea5ae90bdefe76fb77c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠹ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b042759a63647fda8b53039a789fb63",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠴ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a03b49c8c8ca4e65975ff529da963882",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠋ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d4d7589905a4b3884e67782b3fa64dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/239 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠏ - Huggingface model sentence-transformers/all-mpnet-base-v2 "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyter/jupyterenv/lib/python3.10/site-packages/urllib3/connectionpool.py:1097: InsecureRequestWarning: Unverified HTTPS request is being made to host 'ec2-54-246-49-57.eu-west-1.compute.amazonaws.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ - Huggingface model sentence-transformers/all-mpnet-base-v2 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "install_model(ai_lab_config, TransformerModel(\n",
     "                \"sentence-transformers/all-mpnet-base-v2\", \"feature-extraction\", AutoModel\n",
@@ -332,21 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f343b288db1d4614",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ExaStatement session_id=1850020851146555392 stmt_idx=2>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql_semantic_join = f\"\"\"\n",
     "--/\n",
@@ -466,35 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "21770aa932a9fb4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
    ]
@@ -511,138 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a9886b4638692671",
    "metadata": {
     "SqlCellData": {
      "variableName$1": "df_sql1"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@ec2-54-246-49-57.eu-west-1.compute.amazonaws.com:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">12 rows affected.</span>"
-      ],
-      "text/plain": [
-       "12 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>title</th>\n",
-       "            <th>topic</th>\n",
-       "            <th>r</th>\n",
-       "            <th>similarity_score</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>(RPT) U.S. SAYS TIN DISPOSALS WILL NOT AFFECT ACCORD</td>\n",
-       "            <td>tin</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5479601621627808</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>ATPC MEMBERS FIND WAYS TO CURB TIN EXPORTS</td>\n",
-       "            <td>tin</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.602620005607605</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>BAHIA COCOA REVIEW</td>\n",
-       "            <td>cocoa</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.6362672448158264</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>CANADA RULING ON U.S. CORN INJURY DUE THIS WEEK</td>\n",
-       "            <td>corn</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5086946487426758</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>CHINESE WHEAT CROP THREATENED BY PESTS, DISEASE</td>\n",
-       "            <td>wheat</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5508740544319153</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>INDONESIAN TEA, COCOA EXPORTS SEEN UP, COFFEE DOWN</td>\n",
-       "            <td>cocoa</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5876307487487793</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>NYMEX TO SUBMIT PROPANE PROPOSAL TO CFTC</td>\n",
-       "            <td>propane</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5077935457229614</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>OFFICIAL INQUIRY SET FOR AUSTRALIAN WHEAT INDUSTRY</td>\n",
-       "            <td>wheat</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5389493703842163</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>STOP AND SHOP COS INC <SHP> 4TH QTR JAN 31 NET</td>\n",
-       "            <td>retail</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5028800964355469</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>U.S. WEEKLY SOYBEAN CRUSH 21,782,929 BUSHELS</td>\n",
-       "            <td>soybean</td>\n",
-       "            <td>1</td>\n",
-       "            <td>0.5226584672927856</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>\n",
-       "<span style=\"font-style:italic;text-align:center;\">Truncated to <a href=\"https://jupysql.ploomber.io/en/latest/api/configuration.html#displaylimit\">displaylimit</a> of 10.</span>"
-      ],
-      "text/plain": [
-       "+------------------------------------------------------+---------+---+--------------------+\n",
-       "|                        title                         |  topic  | r |  similarity_score  |\n",
-       "+------------------------------------------------------+---------+---+--------------------+\n",
-       "| (RPT) U.S. SAYS TIN DISPOSALS WILL NOT AFFECT ACCORD |   tin   | 1 | 0.5479601621627808 |\n",
-       "|      ATPC MEMBERS FIND WAYS TO CURB TIN EXPORTS      |   tin   | 1 | 0.602620005607605  |\n",
-       "|                  BAHIA COCOA REVIEW                  |  cocoa  | 1 | 0.6362672448158264 |\n",
-       "|   CANADA RULING ON U.S. CORN INJURY DUE THIS WEEK    |   corn  | 1 | 0.5086946487426758 |\n",
-       "|   CHINESE WHEAT CROP THREATENED BY PESTS, DISEASE    |  wheat  | 1 | 0.5508740544319153 |\n",
-       "|  INDONESIAN TEA, COCOA EXPORTS SEEN UP, COFFEE DOWN  |  cocoa  | 1 | 0.5876307487487793 |\n",
-       "|       NYMEX TO SUBMIT PROPANE PROPOSAL TO CFTC       | propane | 1 | 0.5077935457229614 |\n",
-       "|  OFFICIAL INQUIRY SET FOR AUSTRALIAN WHEAT INDUSTRY  |  wheat  | 1 | 0.5389493703842163 |\n",
-       "|    STOP AND SHOP COS INC <SHP> 4TH QTR JAN 31 NET    |  retail | 1 | 0.5028800964355469 |\n",
-       "|     U.S. WEEKLY SOYBEAN CRUSH 21,782,929 BUSHELS     | soybean | 1 | 0.5226584672927856 |\n",
-       "+------------------------------------------------------+---------+---+--------------------+\n",
-       "Truncated to displaylimit of 10."
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "SELECT *\n",
@@ -680,7 +327,7 @@
     "#### Parallel execution\n",
     "Please note that executing multiple queries with GPU UDFs in parallel can lead to unexpected errors, as the GPU libraries used within the UDFs may attempt to allocate the same GPU device and memory simultaneously. In the current Exasol version, the user responsible to ensure that the libraries are configured appropriately or that only one query uses a GPU device.\n",
     "\n",
-    "Check out the [GPU Resource Considerations](./gpu_resource_considerations.ipynb) for more information."
+    "Check out the [GPU Resource Considerations](./gpu_resource_considerations.ipynb) model for more information."
    ]
   }
  ],
