Apply suggestions from code review
Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "### Check for Database compatibility\n",
     "\n",
-    "This notebooks works only correct on an Exasol Database version 2025.2.0 or later."
+    "This notebook works only correct on an Exasol Database version 2025.2.0 or later."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "12b474f9-4df5-4da6-9d5e-6b202fba4a69",
    "metadata": {},
    "source": [
-    "### How GPU resources are managed\n",
+    "### How GPU Resources are managed\n",
     "\n",
     "In each select/sub-select statement, only a single UDF call is allowed to exclusively use all the available GPUs. The resource reservation by the GPU resource management happens per UDF call and individually for each UDF call.\n",
     "\n",
@@ -204,11 +204,11 @@
    "id": "4b5814a2-f60d-4e0a-8572-3c12eb454e8f",
    "metadata": {},
    "source": [
-    "### Multiple GPU accelerated UDF calls in single query \n",
+    "### Multiple GPU accelerated UDF Calls in single Query \n",
     "\n",
     "Using more than one GPU accelerated UDF call in a single query will either raise an error or fall back to CPU usage.\n",
     "\n",
-    "Let's define a UDF which requires a GPU and then use the UDF twice in the same query."
+    "Let us define a UDF which requires a GPU and then use the UDF twice in the same query."
    ]
   },
   {
@@ -301,7 +301,7 @@
    "source": [
     "### GPU usage across UDF instances\n",
     "\n",
-    "If there are multiple UDF instances of a single UDF call within the same query, all those instances will have access to all (GPU) accelerators. To reduce the risk of running out of GPU memory, we recommend that you use UDF instance limiting to control how many accelerators each instance can use, and that you configure the instance limit based on the number of accelerators and the use case."
+    "If there are multiple UDF instances on a data node of a single UDF call within the same query, all those instances will have access to all (GPU) accelerators on this node. To reduce the risk of running out of GPU memory, we recommend that you use UDF instance limiting to control how many accelerators each instance can use, and that you configure the instance limit based on the number of accelerators and the use case."
    ]
   },
   {
@@ -359,7 +359,7 @@
    "source": [
     "#### Set UDFs\n",
     "\n",
-    "For set UDF it is possible to generate a group per GPU and pass this `GPU id` to the UDF as parameter.\n",
+    "For Set UDF it is possible to generate a group per GPU and pass this `GPU id` to the UDF as parameter.\n",
     "\n",
     "For this purpose we modify the example from the [Advanced UDF with GPU Support](./advanced_udf_with_gpu.ipynb) notebook."
    ]
@@ -575,7 +575,7 @@
    "id": "208fa0b7-a737-419c-ae98-541cfc891dfe",
    "metadata": {},
    "source": [
-    "Finally we call the UDF to calculate the semantic join, distributed safely across multiple GPUs and nodes:"
+    "Now, we call the UDF to calculate the semantic join, distributed safely across multiple GPUs and nodes:"
    ]
   },
   {
@@ -622,14 +622,6 @@
     "with open_pyexasol_connection_with_lang_definitions(ai_lab_config, schema=ai_lab_config.db_schema, compression=True) as conn:\n",
     "    res = conn.export_to_pandas(sql_semantic_join)\n",
     "res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00a29a09-705e-4530-b66a-7d8fdabfcf9d",
-   "metadata": {},
-   "source": [
-    "The following is a more generic approach, with which you can assign UDF instances to GPU's, on multiple nodes."
    ]
   },
   {
