Apply suggestions from code review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# GPU Resource Considerations\n",
     "\n",
-    "In this tutorial we will learn about how to manage access to GPU's from UDF's."
+    "In this tutorial we will learn about how to manage access to GPUs from UDFs."
    ]
   },
   {
@@ -40,8 +40,8 @@
    "metadata": {},
    "source": [
     "### Prerequisites\n",
-    "- Run the [S3 VS tutorial](../cloud/02_s3_vs_reuters.ipynb) in order to populate the input data\n",
-    "- Run the [Advanced UDF with GPU Support](./advanced_udf_with_gpu.ipynb) in order to populate the ML models"
+    "- Run the [Tutorial on the Virtual Schema for S3](../cloud/02_s3_vs_reuters.ipynb) for populating the input data\n",
+    "- Run the [Advanced UDF with GPU Support](./advanced_udf_with_gpu.ipynb) for initializing the AI models"
    ]
   },
   {
@@ -51,8 +51,7 @@
    "source": [
     "### Instantiate ScriptLanguagesContainer\n",
     "\n",
-    "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
-    "which enables us to use the Script Language Container (SLC)."
+    "The following cell creates an instance of `ScriptLanguageContainer` for managing Script Language Containers (SLCs)."
    ]
   },
   {
@@ -71,7 +70,7 @@
    "id": "5e94bb0a-83c7-43f5-b223-fc1b45d4ecc3",
    "metadata": {},
    "source": [
-    "### Import Python modules"
+    "### Import Python Modules"
    ]
   },
   {
@@ -92,7 +91,7 @@
    "id": "df3bd185-dcdc-4486-95e8-4f163cdf552b",
    "metadata": {},
    "source": [
-    "### Check for Database compatibility\n",
+    "### Check Database Compatibility\n",
     "\n",
     "This notebook works only correct on an Exasol Database version 2025.2.0 or later."
    ]
@@ -117,13 +116,13 @@
    "id": "12b474f9-4df5-4da6-9d5e-6b202fba4a69",
    "metadata": {},
    "source": [
-    "### How GPU Resources are managed\n",
+    "### How GPU Resources are Managed\n",
     "\n",
-    "In each select/sub-select statement, only a single UDF call is allowed to exclusively use all the available GPUs. The resource reservation by the GPU resource management happens per UDF call and individually for each UDF call.\n",
+    "In each select/sub-select statement, only a single UDF call is allowed to exclusively use all the available GPUs. The resources are allocated by the GPU Resource Management individually for each UDF call.\n",
     "\n",
-    "When multiple queries that each contain a single GPU-accelerated UDF are executed concurrently, the executions (UDF calls) are serialized. Each UDF call will wait to execute until an exclusive resource usage is made possible by accelerator resources being freed up by other UDF calls.\n",
+    "When several queries, each featuring a single GPU-accelerated user-defined function (UDF), are executed simultaneously, their executions are serialized. Each UDF call must await its turn, pausing until the exclusive use of accelerator resources becomes available. Only when resources are freed by preceding UDF calls can subsequent UDF executions proceed.\n",
     "\n",
-    "This means that simultaneous execution of multiple GPU-accelerated UDF calls as part of a single select/sub-select statement is not possible. All UDF calls except one will in this case either fail or fall back to CPU usage, depending on the configuration.\n",
+    "This implies that it is not feasible to execute multiple GPU-accelerated UDF calls concurrently within a single select or sub-select statement. In such scenarios, only one UDF call will be executed as intended, while any additional calls will either fail or revert to CPU processing, depending upon the UDF configuration.\n",
     "\n",
     "To simulate two simultaneous SQL queries, we create first a long running UDF:"
    ]
@@ -204,9 +203,9 @@
    "id": "4b5814a2-f60d-4e0a-8572-3c12eb454e8f",
    "metadata": {},
    "source": [
-    "### Multiple GPU accelerated UDF Calls in single Query \n",
+    "### Multiple GPU-Accelerated UDF Calls in Single Query \n",
     "\n",
-    "Using more than one GPU accelerated UDF call in a single query will either raise an error or fall back to CPU usage.\n",
+    "Using more than one GPU-accelerated UDF call in a single query, will either raise an error or fall back to CPU usage.\n",
     "\n",
     "Let us define a UDF which requires a GPU and then use the UDF twice in the same query."
    ]
@@ -243,7 +242,7 @@
    "id": "19b772b4-1b2a-4d80-b60f-20c08ecb45bd",
    "metadata": {},
    "source": [
-    "The same problem can happen with only one UDF which requires an GPU, and other UDFs with CPU fallback, as execution order is unpredictable."
+    "The same effect can happen with UDF (1) _requiring_ a GPU, and UDF (2) with optional CPU fallback, as the execution order cannot be predicted."
    ]
   },
   {
@@ -279,7 +278,7 @@
    "id": "4cfe5be5-1d75-43ce-9c68-b03aba890d36",
    "metadata": {},
    "source": [
-    "If your query contains only UDFs that support CPU fallback, one of the UDFs will be assigned the GPU accelerator. However, it is not possible to predict which one."
+    "If your query contains multiple UDFs, all allowing support CPU fallback, then the GPU accelerator will be assigned to _one_ of the UDFs. However, it is not possible to predict which one."
    ]
   },
   {
@@ -299,9 +298,9 @@
    "id": "3dc2ce16-330a-464b-813a-42498ba91bb8",
    "metadata": {},
    "source": [
-    "### GPU usage across UDF instances\n",
+    "### GPU Usage Across UDF Instances\n",
     "\n",
-    "If there are multiple UDF instances on a data node of a single UDF call within the same query, all those instances will have access to all (GPU) accelerators on this node. To reduce the risk of running out of GPU memory, we recommend that you use UDF instance limiting to control how many accelerators each instance can use, and that you configure the instance limit based on the number of accelerators and the use case."
+    "If there are multiple UDF instances on a data node of a single UDF call within the same query, all those instances will have access to all (GPU) accelerators on this node. To reduce the risk of running out of GPU memory, we recommend that you use _UDF instance limiting_ to control how many accelerators each instance can use, and that you configure the instance limit based on the number of accelerators and the use case."
    ]
   },
   {
@@ -310,7 +309,7 @@
    "metadata": {},
    "source": [
     "#### Scalar UDFs\n",
-    "For Scalar UDFs there is no mechanism to assign UDF to a certain GPU. Hence, we recommend to use Scalar UDF only to read some GPU device information, but do not any processing on the GPUs. A good example is to execute the `nvidia-smi` tool in a scalar UDF."
+    "For Scalar UDFs there is no mechanism to assign a UDF instance to a specific GPU. Hence, we recommend using Scalar UDFs only for _reading_ some GPU device information, but not to perform any processing on the GPUs. A good example is to execute the `nvidia-smi` tool in a scalar UDF."
    ]
   },
   {
@@ -329,7 +328,7 @@
     "import subprocess\n",
     "\n",
     "def run(ctx):\n",
-    "    cmd = [\"nvidia-smi\"] #List GPU's\n",
+    "    cmd = [\"nvidia-smi\"] #List GPUs\n",
     "    process = subprocess.Popen(\n",
     "        cmd,\n",
     "        stdout=subprocess.PIPE,\n",
@@ -541,7 +540,7 @@
     "```\n",
     "\"SEMANTIC_JOIN\"(GPU_ID, TITLE, TOPIC)\n",
     "```\n",
-    "The data we use to call the UDF looks then like:"
+    "The data used to call the UDF is as follows:"
    ]
   },
   {
