small fixes and better explanation of input and output

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Model Management\n",
     "\n",
-    "This model shows how you can manage the installed models in BucketFS.\n",
+    "This notebook shows how you can manage the installed models in BucketFS.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
@@ -150,9 +150,7 @@
    "cell_type": "markdown",
    "id": "16f68d93-3cea-4db5-82b9-23a2e3bad9a5",
    "metadata": {},
-   "source": [
-    "Running now `TE_LIST_MODELS_UDF` again will show that the model was removed from BucketFS."
-   ]
+   "source": "Running the `TE_LIST_MODELS_UDF` again now will show that the model was removed from BucketFS."
   },
   {
    "cell_type": "code",
@@ -165,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
@@ -177,9 +175,10 @@
    "id": "6d785139-c83a-4474-ad1c-66870a9dcc2c",
    "metadata": {},
    "source": [
-    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it will indicate an error in the output columns `success` and `error_message`.\n",
-    "We can observe if we now try to delete the same model again.",
-    "Note: We don't use the `%%sql` expression here because it interfers with the test tools. But feel free to use `%%sql` in your own notebooks.\n"
+    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, instead it will indicate an error in the output columns `success` and `error_message`.\n",
+    "We can observe this behaviour if we now try to delete the same model again.\n",
+    "\n",
+    "Note: We don't use the `%%sql` expression here because it interferes with the test tools. But feel free to use `%%sql` in your own notebooks.\n"
    ]
   },
   {
