--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -140,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
@@ -195,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
