Updated the notebook first_steps
regarding DB version required for Parquet import
which only applies when using the SQL IMPORT statement.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/first_steps.ipynb
@@ -256,7 +256,7 @@
    "id": "0dc80445-e5c0-43c1-ae34-f16326d6fb94",
    "metadata": {},
    "source": [
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "**Please note**: Parquet import via SQL statement `IMPORT` requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
@@ -447,7 +447,9 @@
    "id": "5dfdd7ec-5cd5-4082-a565-ee17166fd691",
    "metadata": {},
    "source": [
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "**Please note**: \n",
+    "* Parquet import via SQL statement `IMPORT` requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "* This restriction does not apply when using PyExasol's native function [import_from_parquet()](https://exasol.github.io/pyexasol/master/user_guide/exploring_features/import_and_export/index.html#id8).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
@@ -568,7 +570,7 @@
    "id": "d11dcb6d-d3e5-4e1e-8d61-ba59897c56e9",
    "metadata": {},
    "source": [
-    "**Please note**: Parquet import requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
+    "**Please note**: Parquet import via SQL statement `IMPORT` requires using **<span style=\"color: #40a\">Exasol version 2025.\\* or higher</span>**, see [docs.exasol.com](https://docs.exasol.com/db/latest/loading_data/load_data_parquet.htm).\n",
     "\n",
     "Now we can import the Parquet file from S3 into the database:"
    ]
