Fix title and improve clarify on what we mean & why parquet and polars works with different DB versions

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/pyexasol/roundtrip_import_and_export.ipynb
@@ -9,7 +9,7 @@
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>\n",
     "\n",
-    "# Working with Exasol using the PyExasol connector\n",
+    "# Working with Exasol Using the PyExasol Connector\n",
     "\n",
     "In this notebook, we will show some basic operations on data using PyExasol. You can find more detailed information on using PyExasol in its [documentation](https://exasol.github.io/pyexasol/master/index.html).\n",
     "\n",
@@ -21,7 +21,7 @@
     "1. [Configure the AI Lab](../main_config.ipynb).\n",
     "\n",
     "Please note:\n",
-    "* AI Lab currently is shipped with PyExasol version `1.3.0`. The import from and export to parquet was introduced in PyExasol version `1.2.0`, and the usage with polars was first introduced in PyExasol version `1.0.0`.\n",
+    "* AI Lab currently is shipped with PyExasol version `1.3.0`. The `import_from_parquet` and `export_to_parquet` were introduced in PyExasol version `1.2.0`, and the usage with polars was first introduced in PyExasol version `1.0.0`. Both functions for parquet and polars should work for all supported database versions, as these functions convert data into streamed CSVs before executing the IMPORT or EXPORT statement.\n",
     "\n",
     "## 1. Setup\n",
     "\n",
